feat: introduce versioning field support and validation
Add `bean_version` and `id_original_bean` fields for versioning support. Introduce validation logic to ensure both fields' presence when using versioning, throwing detailed exceptions for inconsistencies. Refactor Column-related methods to handle versioning-specific logic and special field deduplication. Update class generation to exclude versioning fields from setters and validations. Add `FieldFormatError` enum for improved error categorization and handling.